Fix and adapt after latest generated code update