@@ -2,7 +2,6 @@ package com.pydio.cells.utils;
 
 import com.pydio.cells.api.CustomEncoder;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -10,22 +9,27 @@ import java.util.Base64;
 
 public class JavaCustomEncoder implements CustomEncoder {
 
-    @SuppressWarnings("NewApi")
-    @Override
-    public byte[] base64Encode(byte[] inValue) {
-        Base64.getEncoder().encode(inValue);
-        return inValue;
-    }
+//    @SuppressWarnings("NewApi")
+//    @Override
+//    public byte[] base64Encode(byte[] inValue) {
+//        Base64.getEncoder().encode(inValue);
+//        return inValue;
+//    }
+//
+//    @Override
+//    public String base64Encode(String inValue) {
+//        return new String(base64Encode(inValue.getBytes()));
+//    }
 
-    @Override
-    public String base64Encode(String inValue) {
-        return new String(base64Encode(inValue.getBytes()));
-    }
-
+    @SuppressWarnings({"NewApi"})
     @Override
     public byte[] base64Decode(byte[] inValue) {
-        Base64.getDecoder().decode(inValue);
-        return new byte[0];
+        try {
+            Base64.getDecoder().decode(inValue);
+            return new byte[0];
+        } catch (NoSuchMethodError e) {
+            throw new RuntimeException("Could not decode base 64 string: [" + inValue + "]", e);
+        }
     }
 
     @Override
@@ -33,30 +37,30 @@ public class JavaCustomEncoder implements CustomEncoder {
         return null;
     }
 
-    @Override
+    @SuppressWarnings({"NewApi"})
     public String utf8Encode(String value) {
-        // TODO this method throws an exception in android context but not in the sdk-java, why ?
         try {
-            return URLEncoder.encode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("Unexpected encoding issue", e);
+            return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        } catch (NoSuchMethodError e) {
+            return URLEncoder.encode(value);
         }
     }
 
-    @Override
+    @SuppressWarnings("NewApi")
     public String utf8Decode(String value) {
-        // TODO this method throws an exception in android context but not in the sdk-java, why ?
         try {
-            return URLDecoder.decode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("Unexpected decoding issue", e);
+            return URLDecoder.decode(value, StandardCharsets.UTF_8);
+        } catch (NoSuchMethodError e) {
+            return URLDecoder.decode(value);
         }
-        //return super.utf8Encode(value);
     }
 
     @Override
     public byte[] getUTF8Bytes(String str) {
-        return str.getBytes(StandardCharsets.UTF_8);
+        try {
+            return str.getBytes(StandardCharsets.UTF_8);
+        } catch (NoSuchMethodError e) {
+            return str.getBytes();
+        }
     }
 }
-
